argo-test/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: smalltalk-test
  namespace: argocd
  labels:
    app.kabang.io/name: smalltalk
    app.kubernetes.io/instance: test
    helm.sh/chart: smalltalk-test-0.1
spec:
  strategy:
    blueGreen:
      activeService: smalltalk-test
      previewService: smalltalk-test-preview
      scaleDownDelaySeconds: 604800
      autoPromotionEnabled: false
      autoPromotionSeconds: 10000
  selector:
    matchLabels:
      app.kabang.io/instance: smalltalk-test
      app.kabang.io/name:  smalltalk-test
  template:
    metadata:
      labels:
        app.kabang.io/name: smalltalk
        app.kubernetes.io/instance: test
        helm.sh/chart: smalltalk-test-0.1
    spec: 
      securityContext:
        {}
      terminationGracePeriodSeconds: 30
      containers:
        - name: smalltalk-test
          image: "tomcat:jdk17-temurin-jammy"

          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 40
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 40
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: "2"
              memory: 4Gi
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sleep
                - "2"
