argo-test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smalltalk-test
  namespace: argocd
  labels:
    app.kabang.io/name: smalltalk
    app.kubernetes.io/instance: test
    helm.sh/chart: smalltalk-test-0.1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http

  selector:
    app.kabang.io/name: smalltalk-test
    app.kabang.io/instance: smalltalk-test
