argo-test/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: smalltalk-test
  namespace: argocd
  labels:
    app.kabang.io/name: smalltalk
    app.kubernetes.io/instance: test
    helm.sh/chart: smalltalk-test-0.1
  annotations:
    kubernetes.io/ingress.class: alb  
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match:
        Host(`k8s-argocd-argocdin-b4f18b4808-1855751487.ap-northeast-2.elb.amazonaws.com/smalltalk`)
      kind: Rule
      services:
        - name: smalltalk-test
          port: 8080
